Refactor: "saveSchedule 리팩터링"